--- a/01-overview/snake-game/package.json
+++ b/01-overview/snake-game/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && touch dist/.nojekyll"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
