--- a/.github/workflows/deploy-snake.yml
+++ b/.github/workflows/deploy-snake.yml
@@ -1,4 +1,4 @@
-name: Deploy Snake Game to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -23,6 +23,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: 01-overview/snake-game
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,19 +34,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: '01-overview/snake-game/package-lock.json'
       
       - name: Install dependencies
-        run: |
-          cd 01-overview/snake-game
-          npm ci
+        run: npm ci
       
       - name: Build
-        run: |
-          cd 01-overview/snake-game
-          npm run build
-          touch dist/.nojekyll
+        run: npm run build
+      
+      - name: Add .nojekyll
+        run: touch dist/.nojekyll
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
