--- a/.github/workflows/deploy-snake.yml
+++ b/.github/workflows/deploy-snake.yml
@@ -41,8 +41,11 @@ jobs:
       - name: Build
         run: npm run build
       
-      - name: Add .nojekyll
-        run: touch dist/.nojekyll
+      - name: Prepare deployment structure
+        run: |
+          mkdir -p ../../_site/snake-game
+          cp -r dist/* ../../_site/snake-game/
+          touch ../../_site/.nojekyll
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -50,7 +53,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '01-overview/snake-game/dist'
+          path: '_site'
       
       - name: Deploy to GitHub Pages
         id: deployment
