--- a/.github/workflows/deploy-snake.yml
+++ b/.github/workflows/deploy-snake.yml
@@ -41,11 +41,8 @@ jobs:
       - name: Build
         run: npm run build
       
-      - name: Prepare deployment structure
-        run: |
-          mkdir -p ../../_site/snake-game
-          cp -r dist/* ../../_site/snake-game/
-          touch ../../_site/.nojekyll
+      - name: Add .nojekyll
+        run: touch dist/.nojekyll
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -53,7 +50,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '_site'
+          path: '01-overview/snake-game/dist'
       
       - name: Deploy to GitHub Pages
         id: deployment
